[package]
name = "pixeldust-browser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
encoding_rs = "0.8.35"
eframe = { version = "0.31.1", default-features = false, features = ["default_fonts", "glow"] }
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png", "webp"] }
pd-browser.workspace = true
pd-ipc.workspace = true
pd-js.workspace = true
pd-net.workspace = true
pd-renderer.workspace = true
resvg = "0.45.1"
url = "2.5.8"
