[package]
name = "pd-browser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
pd-core.workspace = true
pd-ipc.workspace = true
pd-net.workspace = true
pd-privacy.workspace = true
pd-renderer.workspace = true
pd-security.workspace = true
pd-storage.workspace = true
