[package]
name = "pd-renderer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
pd-css.workspace = true
pd-html.workspace = true
pd-js.workspace = true
pd-layout.workspace = true
pd-render.workspace = true
