[package]
name = "pd-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
pd-core.workspace = true
pd-privacy.workspace = true
pd-security.workspace = true
